<resources>
    <string name="app_name">Báo Chí VN</string>
    <string name="feedback_subject">Báo Chí VN</string>

<!--       dieu khoan ung dung-->
    <string name="dieu_khoan">Báo Chí VN - Đọc Báo, Tin tức trân trọng cảm ơn các bạn đã sử dụng ứng dụng “Báo Chí VN” của chúng tôi. Mọi nội dung trong “Báo Chí VN” được chia sẽ công khai lấy từ các trang web tin tức lớn của Việt Nam.\n- Tin tức được cập nhật liên tục từng phút trong “Báo Chí VN”.\n- Chúng tôi không sở hữu bất kỳ nội dung nào trong ứng dụng. Ứng dụng chỉ hiển thị nội dung của các bài báo.\n- Khi các bạn click vào xem các bài báo thì ứng dụng sẽ chuyển đến website lưu trữ nội dung bài viết đó.\n- Chúng tôi không sở hữu quyền của bất kỳ nội dung nào.\n- Nhằm duy trì và phát triển ứng dụng ngày một phù hợp và phục vụ người dùng tốt hơn chúng tôi có sử dụng quảng cáo của Google để tạo doanh thu cho ứng dụng.\n- Chúng tôi không khuyến khích các bạn click vào quảng cáo. Nếu các bạn thấy quảng cáo có ích cho mình thì hãy click để xem.\n- Chân thành cảm ơn các bạn đã sử dụng ứng dụng “Báo Chí VN”.\nChúc các bạn có những thông tin giải trí và kiến thức hữu ích cho mình.</string>

    <!--Id test Ads-->
    <string name="ad_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_full_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="tin_tuc">Tin tức</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="danh_gia_chung_toi">Đánh giá chúng tôi</string>
    <string name="chia_se_voi_ban_be">Chia sẻ với bạn bè</string>
    <string name="gop_y">Góp ý</string>
    <string name="dieu_khoan_ung_dung">Điều khoản ứng dụng</string>
    <string name="tin_doc_gan_day">Tin đọc gần đây</string>
    <string name="tin_da_luu">Tin đã lưu</string>
    <string name="doi_theme_theo_khung_gio">Đổi theme theo khung giờ</string>
    <string name="che_do_ban_dem">Chế độ ban đêm</string>
    <string name="dieu_khoan_su_dung">Điều Khoản Sử Dụng</string>
    <string name="co_chu">Cỡ chữ</string>
    <string name="nho">Nhỏ</string>
    <string name="vua">Vừa</string>
    <string name="lon">Lớn</string>
    <string name="rat_lon">Rất lớn</string>
    <string name="dong">Đóng</string>
    <string name="noi_dung_khac">Nội Dung Khác</string>
    <string name="tin_lien_quan">Tin liên quan</string>
    <string name="chon_chu_de">Chọn chủ đề</string>
    <string name="content_choose_topic">Chọn ít nhất 3 chủ đề bạn muốn theo để chúng tôi có thể giúp bạn cá nhân hóa trải nghiệm trên HIT.</string>
    <string name="hoan_thanh">Hoàn thành</string>
    <string name="bao_chi">Báo Chí</string>
    <string name="vn">VN</string>

</resources>
