<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@drawable/bg_dialog_size_text"
    android:padding="@dimen/dimen10dp">

    <LinearLayout
        android:id="@+id/lltextsizeDialog"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dimen25dp"
            android:layout_height="@dimen/dimen25dp"
            android:src="@drawable/ic_size_text_in_des" />

        <TextView
            android:layout_marginLeft="@dimen/dimen5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/black"
            android:text="@string/co_chu" />
        <com.google.android.material.card.MaterialCardView
            android:layout_marginLeft="@dimen/dimen10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen5dp"
            android:layout_margin="@dimen/dimen5dp"
            app:strokeWidth="@dimen/dimen1dp"
            app:strokeColor="@color/colorPrimary"
            app:cardElevation="0dp"
            >
            <LinearLayout

                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/llSmallDialog"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_marginTop="@dimen/dimen5dp"
                        android:layout_marginBottom="@dimen/dimen5dp"
                        android:id="@+id/tvSmallDialog"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_16"
                        android:text="@string/nho" />
                    <ImageView
                        android:layout_width="@dimen/dimen1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llMediumDialog"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvMediumDialog"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_16"
                        android:text="@string/vua" />
                    <ImageView
                        android:layout_width="@dimen/dimen1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llBigDialog"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvBigDialog"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_16"
                        android:text="@string/lon" />
                    <ImageView
                        android:layout_width="@dimen/dimen1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llVeryBigDialog"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvVeryBigDialog"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_16"
                        android:text="@string/rat_lon" />
                </LinearLayout>



            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
    <ImageView
        android:layout_marginTop="@dimen/dimen5dp"
        android:layout_marginBottom="@dimen/dimen5dp"
        android:id="@+id/ivLineDialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen1dp"
        android:background="@color/gray_white"
        android:layout_below="@+id/lltextsizeDialog"
        />
    <Button
        android:id="@+id/btnCloseDialog"
        android:layout_below="@+id/ivLineDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        android:background="@drawable/bg_btn_close_dialog"
        android:text="@string/dong" />
</RelativeLayout >