<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <RelativeLayout
           android:padding="@dimen/dimen10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_centerVertical="true"
               android:text="@string/cai_dat"
               android:textStyle="bold"
               android:textAlignment="center"
               android:id="@+id/tvTitle"
               android:textSize="@dimen/text_size_24"
               android:textColor="?attr/textTitle"

               />
       </RelativeLayout>
       <LinearLayout
           android:padding="@dimen/dimen5dp"
           android:id="@+id/btnRateUs"
           android:layout_margin="@dimen/dimen10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <ImageView
               android:layout_marginLeft="@dimen/dimen5dp"
               android:layout_gravity="center"
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_rate_star_off"/>
           <TextView
               android:layout_marginLeft="@dimen/dimen15dp"
               android:layout_gravity="center"
               android:text="@string/danh_gia_chung_toi"
               android:textSize="@dimen/text_size_16"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:textColor="?attr/textColor"
               />
           <ImageView
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_arrow_right_next"/>
       </LinearLayout>
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen1dp"
           android:background="@color/gray_dark"
           android:layout_marginLeft="@dimen/dimen10dp"
           android:layout_marginRight="@dimen/dimen10dp"

           />
       <LinearLayout
           android:padding="@dimen/dimen5dp"
           android:id="@+id/btnShareWith"
           android:layout_margin="@dimen/dimen10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <ImageView
               android:layout_marginLeft="@dimen/dimen5dp"
               android:layout_gravity="center"
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_share"/>
           <TextView
               android:layout_marginLeft="@dimen/dimen15dp"
               android:layout_gravity="center"
               android:text="@string/chia_se_voi_ban_be"
               android:textSize="@dimen/text_size_16"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:textColor="?attr/textColor"
               />
           <ImageView
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_arrow_right_next"/>
       </LinearLayout>
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen1dp"
           android:background="@color/gray_dark"
           android:layout_marginLeft="@dimen/dimen10dp"
           android:layout_marginRight="@dimen/dimen10dp"/>
       <LinearLayout
           android:padding="@dimen/dimen5dp"
           android:id="@+id/btnFeeBack"
           android:layout_margin="@dimen/dimen10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <ImageView
               android:layout_marginLeft="@dimen/dimen5dp"
               android:layout_gravity="center"
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_feedback"/>
           <TextView
               android:layout_marginLeft="@dimen/dimen15dp"
               android:layout_gravity="center"
               android:text="@string/gop_y"
               android:textSize="@dimen/text_size_16"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:textColor="?attr/textColor"
               />
           <ImageView
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_arrow_right_next"/>
       </LinearLayout>
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen1dp"
           android:background="@color/gray_dark"
           android:layout_marginLeft="@dimen/dimen10dp"
           android:layout_marginRight="@dimen/dimen10dp"/>
       <LinearLayout
           android:padding="@dimen/dimen5dp"
           android:id="@+id/btnChangeThemeByTime"
           android:layout_margin="@dimen/dimen10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <ImageView
               android:layout_marginLeft="@dimen/dimen5dp"
               android:layout_gravity="center"
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_theme_by_time"/>
           <TextView
               android:layout_marginLeft="@dimen/dimen15dp"
               android:layout_gravity="center"
               android:text="@string/doi_theme_theo_khung_gio"
               android:textSize="@dimen/text_size_16"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:textColor="?attr/textColor"

               />
           <Switch
               android:id="@+id/toggle_by_time"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               />
       </LinearLayout>
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen1dp"
           android:background="@color/gray_dark"
           android:layout_marginLeft="@dimen/dimen10dp"
           android:layout_marginRight="@dimen/dimen10dp"

           />
       <LinearLayout
           android:padding="@dimen/dimen5dp"
           android:id="@+id/btnChangeDarkLight"
           android:layout_margin="@dimen/dimen10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <ImageView
               android:layout_marginLeft="@dimen/dimen5dp"
               android:layout_gravity="center"
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_dark_time"/>
           <TextView
               android:layout_marginLeft="@dimen/dimen15dp"
               android:layout_gravity="center"
               android:text="@string/che_do_ban_dem"
               android:textSize="@dimen/text_size_16"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:textColor="?attr/textColor"
               />
           <Switch
               android:id="@+id/toggle_dark_light"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               />
       </LinearLayout>
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen1dp"
           android:background="@color/gray_dark"
           android:layout_marginLeft="@dimen/dimen10dp"
           android:layout_marginRight="@dimen/dimen10dp"

           />

       <LinearLayout
           android:padding="@dimen/dimen5dp"
           android:id="@+id/btnRecentReading"
           android:layout_margin="@dimen/dimen10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <ImageView
               android:layout_marginLeft="@dimen/dimen5dp"
               android:layout_gravity="center"
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_recent_reading"/>
           <TextView
               android:layout_marginLeft="@dimen/dimen15dp"
               android:layout_gravity="center"
               android:text="@string/tin_doc_gan_day"
               android:textSize="@dimen/text_size_16"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:textColor="?attr/textColor"

               />
           <ImageView
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_arrow_right_next"/>
       </LinearLayout>
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen1dp"
           android:background="@color/gray_dark"
           android:layout_marginLeft="@dimen/dimen10dp"
           android:layout_marginRight="@dimen/dimen10dp"/>
       <LinearLayout
           android:padding="@dimen/dimen5dp"
           android:id="@+id/btnSaveArticle"
           android:layout_margin="@dimen/dimen10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <ImageView
               android:layout_marginLeft="@dimen/dimen5dp"
               android:layout_gravity="center"
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_saved_article"/>
           <TextView
               android:layout_marginLeft="@dimen/dimen15dp"
               android:layout_gravity="center"
               android:text="@string/tin_da_luu"
               android:textSize="@dimen/text_size_16"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:textColor="?attr/textColor"

               />
           <ImageView
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_arrow_right_next"/>
       </LinearLayout>
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen1dp"
           android:background="@color/gray_dark"
           android:layout_marginLeft="@dimen/dimen10dp"
           android:layout_marginRight="@dimen/dimen10dp"/>
       <LinearLayout
           android:padding="@dimen/dimen5dp"
           android:id="@+id/btnApplicationTerms"
           android:layout_margin="@dimen/dimen10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <ImageView
               android:layout_marginLeft="@dimen/dimen5dp"
               android:layout_gravity="center"
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_our_terms"/>
           <TextView
               android:layout_marginLeft="@dimen/dimen15dp"
               android:layout_gravity="center"
               android:text="@string/dieu_khoan_ung_dung"
               android:textSize="@dimen/text_size_16"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:textColor="?attr/textColor"

               />
           <ImageView
               android:layout_width="@dimen/dimen25dp"
               android:layout_height="@dimen/dimen25dp"
               android:src="@drawable/ic_arrow_right_next"/>
       </LinearLayout>
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen1dp"
           android:background="@color/gray_dark"
           android:layout_marginLeft="@dimen/dimen10dp"
           android:layout_marginRight="@dimen/dimen10dp"/>


   </LinearLayout>
</androidx.core.widget.NestedScrollView>